# WanAndroid

./: .gitignore  README.md  build.gradle.kts  local.properties  settings.gradle.kts
accompanist/: build.gradle.kts
accompanist/src/main/: AndroidManifest.xml
androidCommonLib/: build.gradle.kts
androidCommonLib/src/androidTest/java/com/yzz/androidcommonlib/: ExampleInstrumentedTest.kt
androidCommonLib/src/main/: AndroidManifest.xml
androidCommonLib/src/main/java/com/luwei/base/: LwBaseActivity.java  LwBaseFragment.java  LwBasePresent.java
androidCommonLib/src/main/java/com/previewlibrary/: GPVideoPlayerActivity.java  GPreviewActivity.java  GPreviewBuilder.java
androidCommonLib/src/main/res/layout/: activity_gpvideoplayer.xml  fragment_image_photo_layout.xml
androidCommonLib/src/main/res/values/: attr.xml  dimens.xml  strings.xml  styles.xml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/address/: city.sql  county.sql  province.sql
app/src/main/cpp/: CMakeLists.txt  Us.h  native-lib.cpp
app/src/main/proto/: MyProto.proto
app/src/main/res/layout/: activity_main.xml  widget_loading.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v31/: themes.xml
app/src/main/res/xml/: first_glance_widget_info.xml  todo_list_glance_widget_info.xml
buildSrc/src/main/kotlin/: RootDep.kt
buildSrc/src/main/kotlin/dependencies/: Dep.kt
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/src/: lib.rs
wanKsp/: build.gradle.kts
(+172 files in other folders)
