[package]
name = "wanrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[target.'cfg(target_os="android")'.dependencies]
jni = "0.19.0"
rand = "0.8.5"
ndk-sys = "0.3.0"
#hello = { path = "../hello" }

[lib]
name = "wanrust"
crate-type = ["staticlib", "cdylib"]